--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -8,9 +8,15 @@
     <title>Task Mangement</title>
 
     <!-- CSS FILE -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/core.css' %}"></head>
 <body>
+    
+    <style>
+        .main {
+            background-image: url("{% static 'imgs/index.jpg' %}");
+        }
+    </style>
+
     <!-- Header-->
     <header class="header">
         <div class="header-cont">
